fixed more spacing issues, also changed background color of tiles on home page

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ button {
 
 .button:hover {
   background-color: #f9f7f7;
-  color: black !important;
+  color: white !important;
 }
 
 .linkedin {
@@ -486,6 +486,5 @@ button {
 
 .serv-cards {
   border-radius: 1rem;
-  background-color: rgb(43, 42, 42);
+  background-color: hsla(0, 0%, 100%, 0.05);
 }
-
